# forma-embedded-view-sdk-bindings-rust

./: .gitignore  .gitmodules  Cargo.toml  README.md
.agents/skills/autodesk-forma-embedded-views-rust/: SKILL.md
.cursor/skills/autodesk-forma-embedded-views-rust/: SKILL.md
crates/forma-embedded-view-sdk/: Cargo.toml  README.md
crates/forma-embedded-view-sdk/src/: analysis.rs  area_metrics.rs  auth.rs  camera.rs  colorbar.rs  design_tool.rs  elements.rs  error.rs  extensions.rs  generators.rs  geo_data.rs  geometry.rs  integrate.rs  lib.rs  library.rs  predictive_analysis.rs  project.rs  proposal.rs  render.rs  selection.rs  subscription.rs  sun.rs  terrain.rs  types.rs
examples/sample-extension/: Cargo.toml  build.sh
examples/sample-extension/src/: extension.rs  lib.rs
examples/sample-extension/web/: index.html
