[package]
name = "forma-embedded-view-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust/WASM bindings for the Forma Embedded View SDK (forma-embedded-view-sdk npm package)"
license = "Apache-2.0"

[lib]
crate-type = ["rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "HtmlCanvasElement",
    "MessagePort",
] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
