[package]
name = "sample-extension"
version = "0.1.0"
edition = "2021"
description = "Sample Autodesk Forma extension written in Rust/WASM"

[lib]
crate-type = ["cdylib"]

[dependencies]
forma-embedded-view-sdk = { path = "../../crates/forma-embedded-view-sdk" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlElement",
    "HtmlButtonElement",
    "HtmlInputElement",
    "Node",
    "Window",
    "Text",
    "Event",
    "console",
] }
